29 Aug 2019

- Splitting from FigProj selects all spikes, not just plotted spikes, within polygon.

25 Jul 2019

- Revamp history mechanism.

4 Apr 2019

- Kilosort importer reads from NPY files instead of rez.mat (npy-matlab is required for this feature)
- spikesRaw and spikesFilt are written to disk as they are computed, rather than all at once, to save memory (restores v3 behavior)
- removes JRC/saveBinaries due to the above
- New parameter: extractAfterDetect allows you to specify whether you want your features computed after ALL spikes are detected or on a per-chunk, per-file basis.

29 Mar 2019 (4.0.0-beta release)

- Allow user to select exploratory clustering algorithm in main split.
- Allow user to split in FigProj.
- hClust is no longer saved to _res.mat. Now all fields are available without having a copy of JRCLUST installed.

27 Mar 2019

- Bugfix: non-integral sample rates are supported to full precision.
- Export results in phy-compatible format with jrc export-phy /path/to/your/config.prm.
- Display summaries after detect and sort, also added an option to display a summary in UI.

20 Mar 2019

- Bugfix: import-ksort didn't use the correct sites for imported spikes; this has been fixed.

Several small bug fixes.

19 Mar 2019

- New split mechanism (allows for multiple splits).
- Users can press g in the waveform view to go to a specific cluster.
- Bugfix: raw traces in chunks 2:end were being extracted nSamplesPad later than they were supposed to; this has been fixed.

12 Mar 2019

- Intan traditional recordings are now supported (but experimental; please report issues reading your Intan files).
- Users can press q in the waveform view to display quality scores for the selected cluster.
  Pressing SHIFT-Q will also export them to the workspace.

Several small bug fixes.

13 Feb 2019
# mToStruct
- throws a warning if eval/parse fails

# import.v3 (formerly import.importv3)
- updates clusterCenters on import to be consistent with nClusters